lintian (2.5.16) UNRELEASED; urgency=low

  XXX: generate tag summary with private/generate-tag-summary

  * checks/apache2.pm:
    + [NT] Fix F-P apache2-deprecated-auth-config for
      "AllowOverride".  Thanks to Jean-Michel Vourgère
      for the report and an initial patch.
      (Closes: #717621)
  * checks/scripts.pm:
    + [NT] Stop emitting package-uses-local-diversion for
      calls to dpkg-divert without --package as dpkg 1.16.0
      (Wheezy) handles this case correctly.  Thanks to
      Raphaël Hertzog for the report.  (Closes: #679132)

  * debian/changelog:
    + [NT] Correct some older tag summaries to include some
      missing tags in the entry for 2.5.11 and 2.5.12.

  * frontend/lintian:
    + [NT] Move some handling of overrides to Lintian::Tags.

  * lib/Lintian/Tags.pm:
    + [NT] Take over some handling of overrides from the
      frontend.

 -- Niels Thykier <niels@thykier.net>  Wed, 24 Jul 2013 10:30:01 +0200

lintian (2.5.15) unstable; urgency=low

  "use less qw(memory);"

  * Summary of tag changes:
    + Added:
      - composer-package-without-pkg-php-tools-builddep
      - init-script-is-not-a-file
      - init.d-script-does-not-source-init-functions
      - maintainer-script-calls-systemctl
      - manpage-named-after-build-path
      - missing-pkg-php-tools-addon
      - missing-pkg-php-tools-buildsystem
      - pear-channel-without-pkg-php-tools-builddep
      - pear-package-but-missing-dependency
      - pear-package-feature-requires-newer-pkg-php-tools
      - pear-package-not-using-substvar
      - pear-package-without-pkg-php-tools-builddep
      - pecl-package-requires-build-dependency
      - service-file-is-not-a-file
      - systemd-no-service-for-init-script
      - systemd-service-file-outside-lib
      - systemd-service-file-refers-to-obsolete-target
      - systemd-tmpfiles.d-outside-usr-lib

  * checks/*.pm:
    + [NT] Add final return to all subs in checks and ensure