@@ -1,23 +1,0 @@
-#! /bin/bash
-
-### BEGIN INIT INFO
-# Provides:          init.d-general-script-call-internal-api
-# Required-Start:    $local_fs $remote_fs $network $named $time
-# Required-Stop:     $local_fs $remote_fs $network $named $time
-# Should-Start:      $syslog
-# Should-Stop:       $syslog
-# Default-Start:     2 3 4 5
-# Default-Stop:      0 1 6
-# Short-Description: Starts The Onion Router daemon processes
-# Description:       Start The Onion Router, a TCP overlay
-#                    network client that provides anonymous
-#                    transport.
-### END INIT INFO
-
-# Load the VERBOSE setting and other rcS variables (internal API)
-. /lib/init/vars.sh
-
-# Define LSB log_* functions.
-. /lib/lsb/init-functions
-
-printf "start status stop reload restart force-reload\n";
