@@ -7,4 +7,3 @@ E: init.d-general-sourcing-without-test: init.d-script-sourcing-without-test etc
 I: init.d-general-bugs: init.d-script-does-not-implement-optional-option etc/init.d/init.d-general-bugs status
 W: init.d-general-interpreter-in-usr-dir: init.d-script-does-not-source-init-functions etc/init.d/init.d-general-interpreter-in-usr-dir
 W: init.d-general-interpreter-in-usr-dir: init.d-script-uses-usr-interpreter etc/init.d/init.d-general-interpreter-in-usr-dir /usr/bin/perl
-W: init.d-general-script-call-internal-api: init.d-script-call-internal-API etc/init.d/init.d-general-script-call-internal-api
